# crypto-api-service

./: LICENSE  README.md  config.py  main.py  pyproject.toml
lib/: balance_checker.py  base_helper.py  bnb_helper.py  coingecko.py  crypto_sender.py  eth_helper.py  native_sender.py  solana_helper.py  supabase_client.py  telegram_utils.py  trx_helper.py  wallet_validator.py
lib/middleware/: api_key.py  api_limit.py  api_usage.py
lib/monitor/: bsc.py  eth.py  solana.py  usdc_dispatcher.py  usdt_dispatcher.py
lib/monitor/usdc/: base_usdc.py  bsc_usdc.py  eth_usdc.py  sol_usdc.py  trx_usdc.py
lib/monitor/usdt/: base_usdt.py  bsc_usdt.py  eth_usdt.py  sol_usdt.py  trx_usdt.py
routers/crypto/: balance.py  estimate_gas.py  send.py  swap.py  tokens.py  wallet_monitor.py  webhook.py
routers/users/: auth.py  dashboard.py  landing.py
templates/: base.html  dashboard.html  landing.html  login.html  register.html
templates/dashboard/: base_dashboard.html  dashboard.html
templates/dashboard/partials/: api_limit.html  api_usage.html  generate_api.html  halaman_utama.html  profil.html  sidebar.html
templates/partials/: footer.html  navbar.html
